Fix side overflow on Contact on mobile

--- a/source/assets/stylesheets/application.css.scss
+++ b/source/assets/stylesheets/application.css.scss
@@ -74,6 +74,8 @@ form {
   #gotcha {
     position: absolute;
     top: -9999px;
+    width: 0;
+    height: 0;
   }
 }
 
